# google-cognitive-apis

./: Cargo.toml  build.rs
examples/: recognizer_streaming_v2.rs  recognizer_sync_v2.rs
src/: common.rs  speechtotext.rs
src/api/: grpc.rs
src/grpc_stubs/: google.api.rs  google.cloud.dialogflow.v2.rs  google.cloud.dialogflow.v2beta1.rs  google.cloud.speech.v1.rs  google.cloud.speech.v1p1beta1.rs  google.cloud.speech.v2.rs  google.cloud.texttospeech.v1.rs  google.cloud.texttospeech.v1beta1.rs  google.longrunning.rs
src/grpc_stubs/dialogflow_cx/: google.api.rs  google.cloud.dialogflow.cx.v3.rs  google.cloud.dialogflow.cx.v3beta1.rs
src/speechtotext/: recognizer_v2.rs
