[package]
name = "google-cognitive-apis"
version = "0.2.2"
authors = ["Adam Bezecny <adam.bezecny@gmail.com>"]
edition = "2021"
description = "Library wrapping Google speech-to-text, text-to-speech and dialogflow APIs. Provides high level API layer wrapping the underlying complexity of GRPC."
license = "MIT OR Apache-2.0"
keywords = ["speech", "google", "cognitive", "recognition", "synthesizing"]
categories = ["multimedia", "multimedia::audio", "text-processing"]
exclude = [
    "examples/*"
]
repository = "https://github.com/jabber-tools/google-cognitive-apis/"
documentation = "https://jabber-tools.github.io/google_cognitive_apis/doc/0.2.0/google_cognitive_apis/index.html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0"
prost-types = "0"
tonic = { version = "0.12", features = ["transport", "tls"] }
serde = "1"
serde_json = "1"
serde_path_to_error = "0.1"
log = "0.4"
gouth = "0.2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.6" }
async-stream = { version = "0.3.2" }
futures-core = { version = "0.3.15" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
env_logger = "0.11"
futures-util = "0.3"

[features]
default = [
    "speech-to-text",
    "text-to-speech",
    "dialogflow",
]

google-cloud-texttospeech-v1 = []
google-cloud-texttospeech-v1beta1 = []

google-cloud-speechtotext-v1 = []
google-cloud-speechtotext-v2 = []
google-cloud-speechtotext-v1p1beta1 = []

google-cloud-dialogflow-v2 = []
google-cloud-dialogflow-v2beta1 = []
google-cloud-dialogflow-cx-v3 = []
google-cloud-dialogflow-cx-v3beta1 = []

speech-to-text = [
    "google-cloud-speechtotext-v1",
    "google-cloud-speechtotext-v1p1beta1",
    "google-cloud-speechtotext-v2"
]

text-to-speech = [
    "google-cloud-texttospeech-v1",
    "google-cloud-texttospeech-v1beta1",
]

dialogflow = [
    "google-cloud-dialogflow-v2",
    "google-cloud-dialogflow-v2beta1",
    "google-cloud-dialogflow-cx-v3",
    "google-cloud-dialogflow-cx-v3beta1",
]